Joseph changes for SD2

--- a/constraints.tex
+++ b/constraints.tex
@@ -111,12 +111,12 @@ form of warning labels (Ex. DO NOT EXCEED 12V 10A) and software checks.
 
 % Section 3.4
 \subsection{Spectrum Considerations}
-For WHCS we will need to provide over the air communication between the android
+For WHCS we provided over the air communication between the android
 device to the base station and between the base station and the control
 modules. Out of the frequency bands that the FCC has marked as unlicensed we
 decided to use the band that includes 2.4 GHz. Although there are other
 unlicensed bands that could have been used such as the 900MHz band and the 5GHz
-band, 2.4GHz provides the best solution. The higher the frequency the shorter
+band, 2.4GHz provided the best solution. The higher the frequency the shorter
 the range yet the better the data rate and the smaller the device. The main
 reason why 2.4GHz was chosen is because it is a happy median of good range and
 acceptable data rates. Unfortunately because 2.4GHz is such a good frequency to
