--- a/proto.tex
+++ b/proto.tex
@@ -56,129 +56,120 @@ breadboard. Once the individual subsystems have been tested the next step is to
 check how these systems integrate, this too can be done with a bread board. At
 this point you already have a complete proof of concept. The final stage in
 prototyping is to do everything possible to make a design that is as close to
-what the final product will be as possible. Since our group is already making
-their own power boards out of etched PCB. We figured that testing the control
+what the final product will be as possible. Initially we thought we were etching our own powerboards. We figured that testing the control
 modules and base station with an etched PCB design would be the best way to
 know if our drawings from our gerber files lined up the way we wanted them too.
 As a prior step you can also compare dimensions of the parts of the design with
 the gerber file drawing by simply printing out the gerber file on to copy paper
-and placing elements on top. Etching however will add an even further advantage
+and placing elements on top. Etching would have added add an even further advantage
 in that it will allow us to see if the electrical connections in our drawing
-worked out the way we would expect them too. Once we{}'ve proved the concept to
-the level that it has been etched on to practice boards we know that our design
-will work as it was intended to work.
+worked out the way we would expect them too. If we had proved the concept to
+the level that it has been etched on to practice boards we would have known that our design
+would work as it was intended to work. We did however decide not to make etched boards when prototyping our designs. We were pretty confident in our designs and thought it would be best to get our boards fabricated as soon as possible.
 
-Etching is actually a fairly simple process. We will be using
-toner paper to transfer the gerber file from the computer onto the board. Next
-we will utilize TRF paper to further protect the design. Finally we will be
-using an etchant to eat away the copper that is not part of our design. There
+Etching is actually a fairly simple process. If we had etched we would have used toner paper to transfer the gerber file from the computer onto the board. Next
+we would have utilized TRF paper to further protect the design. Finally we would have used an etchant to eat away the copper that is not part of our design. There
 are many different options for etchants that could have been chosen in order to
 complete this step. The most easily accessible though is made by combining
 vinegar, hydrogen peroxide, and salt together. After using the etching solution
 it is important to dispose of it properly (it can{}'t just be poured down the
 sink). Since the solution is very acidic balancing it with a strong base such
-as baking soda or soap will prepare the solution for a better disposal. The
-boards we are using are rogers corporation boards because they provide free
-laminate samples to students. Once the board is etched we will simply solder on
-the components to the board. It{}'s of little importance how we actually
-soldered it on since this board is simply for the use of prototyping
+as baking soda or soap will prepare the solution for a better disposal. We would have used rogers corporation boards because they provide free
+laminate samples to students. Once the board was etched we would have simply soldered on
+the components to the board. 
 
 \subsection{WHCS Proto-Panel}
 \label{sec:proto-panel-proto}
 Presentation plays a huge part on how the public feels about a product. This is
-why it is so important that the display of the project is well put together.
+why it was so important that the display of the project was well put together.
 Not only is it important to have a nice display for the purpose of it being a
 proper representation of our design, but also so that it is aesthetically
 appealing. If WHCS were to be launched into industry, marketing would play a
 huge part in it{}'s success. People{}'s first impressions are always driven by
 what they see. If what they see causes them to believe that the product is of
 high quality, they are less likely to be highly skeptical of how the product
-performs. In this section we will be into details about what plans will be made
+performs. In this section we will be going into detail about how we made our display
 in order to showcase the functions of WHCS. This section will not go into the
 practical side of how the display is coming together; rather it will lay the framework for what goals we want to
 accomplish with the display.
 
-Our design is not a plug and play design, therefore we won{}'t
-be able to simply plug in the system. We{}'ll have to actually find some way to
+Our design is not a plug and play design, therefore installation will require more than simply plugging in the system. We had to find some way to
 duplicate what the installation of a house would look like. In a home what
-we{}'d be provided with is interior wiring. When we are actually presenting our
+we{}'re provided with is interior wiring. When we are actually presenting our
 idea what we{}'ll be presented with is an outlet that we can use to draw power
-from. Therefore the first step we{}'d need to take is to convert this outlet
-back into wiring. We could do this by simply using a basic cord. This cord will
-provide us with a hot and a neutral wire and a path to ground. These wires will
-then be used to power the control modules and the base station. We need to
-somehow splice this wire into multiple wires.
+from. Therefore the first thing we did was convert this outlet
+back into wiring. To do this we took a basic power cord that had a hot, neutral, and ground wire and spliced it with 14 gauge wire that we got from home depot that is meant to be used in a home. We spliced this wire into may different branches and used it to power the control modules and the base station. 
 
-We want to make the display as accurate of a representation of
-what would be found in a home as possible. Therefore we will try to follow as
+We wanted to make the display as accurate of a representation of
+what would be found in a home as possible. Therefore we tried to follow as
 many codes and standards for home construction as possible. Since we ourselves
 do not have a homeowners electrical permit we are not equipped to actually
-install the system in a real home. Yet for demonstrative purposes we{}'ll do
+install the system in a real home. Yet for demonstrative purposes we did
 fine to follow codes and present them in our display. In \autoref{sec:proto-panel}
-we{}'ll go into further detail of what was done to follow these codes and
+we go into further detail of what was done to follow these codes and
 standards.
 
-Our display will consist of the frame, the wiring, and drywall.
-Each made to follow standards. Now our design will consist of 5 different
-wirings; four control modules and one base station.
+Our display consists of the frame, the wiring, and drywall.
+Each made to follow standards. We also decided to make it such that each board was displayed in our proto-panel. To do this we replaced part of the drywall with plexiglass and displayed the temperature sensor control module and the power board.   
 
 \subsubsection{Materials}
-The first thing we need is a plug. It is important that we use a three prong
-plug because wiring in the home uses three wires. In addition to the wiring the
+The first thing we needed was a plug. It was important that we used a three prong
+plug because wiring in the home uses three wires. In addition to the wiring, the
 interior walls of homes consist of drywall, insulation, and a wooden frame. The
 wooden frame of homes is made out of 2 by 4 wood. These pieces of 2 by 4 wood
 are usually put together with either screws or nails. Drywall will also be
-needed to provide the presentation side of our wall. For drywall all we{}'ll
-need is enough drywall to cover the entire wall along with some drywall screws
-in order to attach the drywall. Insulation will be unnecessary since we
-aren{}'t worried about temperature or sound insulation for our project. Also
-insulation in a regular home won{}'t interfere with the installation of our
+needed to provide the presentation side of our wall. For drywall all we
+needed was enough drywall to cover the entire wall along with some screws
+in order to attach the drywall. Insulation wasn't necessary since we
+weren{}'t worried about temperature or sound insulation for our project. Also
+insulation in a regular home wouldn{}'t interfere with the installation of our
 project so really the insulation is irrelevant.
 
 In addition to these basic materials made to construct the walls
-we{}'ll need a few other things. First we{}'ll need the actual control module
-and base station boards. these boards along with the power board will be housed
-in a case that will be attached to the wooden framework. For the light control
-module we will need a wall mounted lamp with a three wire connection. For the
-outlet we will obviously need to buy an outlet. For the outlet and light
-control modules the relays will be placed along the hot wires in order to
-switch them on and back off. To display the outlet control module we will need
-to have something plugged into our display board outlet (for example a fan or a
-coffee maker). The other three modules will need the LCD screen, the door knob,
-the strike, the temperature sensor.
+we needed a few other things. First we needed the actual control module
+and base station boards. If this design were a final product these boards along with the power board would be housed
+in a case that would be attached to the wooden framework. However for our project we simply mounted the boards directly to the frame of our display. For the light control
+module we needed to buy a wall mounted lamp with a three wire connection. For the
+outlet we needed to buy an outlet. For the outlet and light
+control modules the relays were  placed along the hot wires in order to
+switch them on and back off. To display the outlet control module we needed
+to have something plugged into our display board outlet (we used a
+coffee maker). Additionally we needed a door knob,
+the strike, a lamp shade, and some plexiglass to display a power board and the temperature sensor control module.
 
 
-\subsubsection{Dimensions} The dimension of our project is pretty arbitrary,
-that is as long as it is large enough to fix each control module along with the
-base station. The first thing that really had to be decided was whether or not
+\subsubsection{Dimensions} The dimension of our project was pretty arbitrary,
+it just had to be large enough to fit each control module along with the
+base station. The first thing that we decided was whether or not
 we wanted to use a full size door for our design. Although the idea was
 tempting, because it would really give the user the feel of a home experience,
 we decided against it mostly because of weight. If the fame had to be of that
 size all the wood used in the frame along with the weight of an actual door
-would make the project very difficult to move around. Also we{}'d have to
-consider sheer bulkiness of it. Getting an entire door (actually even larger
+would have made the project very difficult to move around. Also it would have been extremely bulky. Getting an entire door (actually even larger
 than an entire door because of the other attached components) through a door
 can be quite a struggle, add weight to the mess and you{}'re asking for
 difficulties.
 
-The door we will be using will be a homemade door. Fortunately
-because we are also designing the frame that will be used for the wall, we can
-simply make the gap in between the studs the same size as the door we wish to
-make. We decided that 18 inches by 18 inches is a suitable size to make the
-door. After deciding this we figured that 2 feet by 2 feet would be a more than
-large enough area of space to display each module. The total square footage of
-the five control modules would be 20 square feet. We decided that a 4 by 5
-display wall would showcase our design quite nicely.
+The door we used was a homemade door. Fortunately
+because we designed the frame that will be used for the wall, we
+simply made the gap in-between the studs the same size as the door we wished to
+make. We decided to use a 2 by 12 piece of wood in order to make the door. As a rough estimate we decided that 2 feet by 2 feet would be a
+large enough area of space to display each individual module. The total square footage of
+the five control modules would be 20 square feet. We decided that a 4 by 5 feet
+display wall would showcase our design quite nicely. Yet ended up going with a 4 by 6 feet display because it was easier to view and play with.
 
-\subsubsection{Sketch} In the 4 by 5 display we have to decide where everything
-will go. The most important interactive parts of our design are the access
-control module and the base station. We must make sure that these two modules
-are at an acceptable height where they can be interacted with. We decided to
+\subsubsection{Sketch} This section shows the original mock up of our 4 by 5 display (even though we ended up using a 4 by 6 display). The most important interactive parts of our design are the door access
+control module and the base station. We made sure that these two modules
+were at an acceptable height where they could be interacted with. In the mock up we decided to
 place three of the modules on the bottom portion and two modules on the top
-portion. The two on top at a more accessible height therefore the door access
-and the base station will be placed here. The light outlet and temperature
-sensor will be placed on the bottom half. To make things look symmetrical the
-lamp will be placed in the middle while the outlet and the temperature sensor
-will be placed on the side. The display will look something like \autoref{fig:proto-sketch}.
+portion. The two on top were at a more accessible height therefore the door access
+and the base station were placed there for our mock up. The light outlet and temperature
+sensor were placed on the bottom half. To make things look symmetrical the
+lamp was placed in the middle while the outlet and the temperature sensor
+were placed on the side. The design we came up with in the mock up is shown below in  \autoref{fig:proto-sketch}.
 
-\ucfgfx[scale=0.45]{fig:proto-sketch}{a83expected2pagesprotopanel-img001.png}{General design of WHCS display board}
+\ucfgfx[scale=0.45]{fig:proto-sketch}{a83expected2pagesprotopanel-img001.png}{Mock up design of WHCS display board}
+
+What we actually ended up building is shown in \autoref{fig:proto-panel} below.
+
+\ucfgfx[scale=0.25]{fig:proto-panel}{11700729_10205701511914436_783349522353423227_o.png}{Built WHCS display board}
